overlays/production/course-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: course-app
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 600m
            memory: 750Mi
