overlays/production/course-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
spec:
  ports:
      port: 8081
      targetPort: 8080
