overlays/production/course-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
spec:
  ingressClassName: traefik
  rules:
    - host: course-app.local.prod
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app-service
                port:
                  number: 8081
